# strava-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/strava_mcp/: __init__.py  auth.py  client.py  logging_setup.py  merge.py  server.py  streams.py
src/strava_mcp/tools/: __init__.py  activities.py  athlete.py  gear.py  merge_tool.py
