[project]
name = "strava-mcp"
version = "0.1.0"
description = "MCP server for personal Strava account — coaching, nutrition, activity edits, split merge."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "gpxpy>=1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strava_mcp"]

[project.scripts]
strava-mcp = "strava_mcp.server:main"
